<resources>
    <string name="app_name">OtterShare</string>

    <!--Login Strings-->
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_btn_submit">Login</string>
    <string name="login_btn_create">Create Account</string>
    <string name="login_btn_create_label">Not a member?</string>
    <string name="reg_hint_email">example@csumb.edu</string>

    <string name="login_heading">Sign in</string>

    <!--Login toasts-->
    <string name="login_toast_unverified">Unverified\nCheck your CSUMB email to verify</string>
    <string name="login_toast_invalid">Invalid login\nEmail or password was entered incorrectly</string>
    <string name="login_toast_fatal_error">An unexpected error occurred. Try again.</string>
    <string name="login_toast_success">Signed into OtterShare</string>
    <string name="login_toast_success_new">Success\nWelcome to OtterShare!</string>

    <!--Strings regarding SharedPreferences data-->
    <string name="os_pref_user_info">ottershare_user_info</string>
    <string name="os_new_status">ottershare_user_status</string>
    <string name="os_name">ottershare_user_name</string>
    <string name="os_email">ottershare_user_email</string>
    <string name="os_apikey">ottershare_user_api_key</string>
    <string name="os_pass_status">ottershare_user_pass_status</string>
    <string name="os_pass_geolocation">ottershare_registered_pass_geolocation</string>
    <string name="os_pass_id">ottershare_registered_pass_id</string>
    <string name="os_pass_selling_status">ottershare_pass_selling_status</string>
    <string name="os_pass_selling_status_foundBuyer">ottershare_pass_selling_status_foundBuyer</string>

    <string name="title_activity_main_map">MainMap</string>
    <string name="action_settings">Settings</string>

    <!--Parking activity-->
    <string name="swipe_when_parked_prompt">Swipe when parked</string>
    <string name="parking_conformation_prompt"> Is this where you parked?</string>

    <!--Notification string for fusedGpsService-->
    <string name="local_service_started">fusedGpsStart/Stop</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="waiting_seller_response">Waiting seller response</string>
    <string name="complete_transaction_seller_swipe_when_transation_is_completed">Swipe when the transaction is complete</string>
    <string name="complete_transaction_seller_meet_text">meet them at your car</string>
    <string name="complete_transaction_seller_agreed_text">has agreed to buy your pass</string>
    <string name="os_pass_buying_id">ottershare_pass_id_for_buying</string>
    <string name="os_pass_buying_status">ottershare_pass_buying_status</string>
    <string name="os_pass_buying_email">ottershare_pass_buying_email</string>
    <string name="os_pass_selling_buyerEmail">ottershare_pass_selling_buyerEmail</string>

</resources>
