<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Color_AppBackground"
    tools:context="com.ottershare.ottershare.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_logo"
        app:srcCompat="@drawable/os_logo"
        android:cropToPadding="false"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_heading"
        android:id="@+id/login_heading"
        style="@style/login_text"
        android:layout_below="@+id/login_logo"/>


    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/login_email_input"
        android:layout_below="@+id/login_heading"
        android:inputType="textEmailAddress"
        style="@style/login_input"
        android:nextFocusDown="@+id/login_password_input"
        android:hint="@string/login_label_email"/>

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/login_password_input"
        android:layout_below="@+id/login_email_input"
        android:inputType="textPassword"
        android:hint="@string/login_label_password"
        style="@style/login_input"
        android:layout_marginTop="10dp"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_height="wrap_content"
        style="@style/login_button"
        android:id="@+id/login_btn_submit"
        android:layout_below="@+id/login_password_input"
        android:text="@string/login_btn_submit"
        android:background="@color/login_btn_submit"
        android:layout_marginTop="@dimen/login_btn_margin"
        android:layout_marginBottom="@dimen/login_btn_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn_create_label"
        style="@style/login_text"
        android:layout_below="@+id/login_btn_submit"
        android:text="@string/login_btn_create_label"/>

    <Button
        android:layout_height="wrap_content"
        style="@style/login_button"
        android:id="@+id/login_btn_create"
        android:layout_below="@+id/login_btn_create_label"
        android:text="@string/login_btn_create"
        android:background="@color/login_btn_create" />

</RelativeLayout>